[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["langpert*"]
exclude = ["examples*", "tests*"]

[tool.setuptools.package-data]
"langpert.configs" = ["*.yaml", "**/*.yaml"]

[project]
name = "langpert"
version = "0.1.0"
description = "A minimal LLM framework for cell perturbation predictions using hybrid LLM-kNN approach"
readme = "README.md"
requires-python = ">=3.9"
authors = [{ name = "KQTM" }]
license = { text = "MIT" }
dependencies = [
  "numpy>=1.20.0",
  "pydantic>=2.0.0",
  "openai>=1.0.0",
  "google-generativeai>=0.3.0",
  "tqdm>=4.0.0",
  "hydra-core>=1.3.2",
  "omegaconf>=2.3.0",
  "wandb>=0.15.0",
]

[project.optional-dependencies]
transformers = ["transformers>=4.20.0", "torch>=1.12.0", "bitsandbytes>=0.39.0"]
unsloth = ["unsloth>=2024.8.0"]
all = ["langpert[transformers,unsloth]"]
dev = [
  "pytest>=6.0",
  "pytest-cov>=2.0",
  "black>=22.0",
  "isort>=5.0",
  "flake8>=4.0",
]

[dependency-groups]
dev = [
    "pytest>=8.4.2",
]

